force-app/main/default/objects/Integration_Work_Setting__mdt/Integration_Work_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Integration Work Setting</label>
    <pluralLabel>Integration Work Settings</pluralLabel>
</CustomObject>