force-app/main/default/objects/Integration_Work_Setting__mdt/fields/Dispatch_Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Batch_Size__c</fullName>
    <defaultValue>25</defaultValue>
    <label>Dispatch Batch Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>