force-app/main/default/objects/Integration_Work_Setting__mdt/fields/Integration__c.field-meta.xml
<CustomField>
    <fullName>Integration__c</fullName>
    <label>Integration</label>
    <length>80</length>
    <type>Text</type>
</CustomField>