force-app/main/default/objects/Integration_Work_Setting__mdt/fields/Lease_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Lease_Minutes__c</fullName>
    <defaultValue>10</defaultValue>
    <label>Lease Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>