force-app/main/default/objects/Integration_Work_Setting__mdt/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <length>80</length>
    <type>Text</type>
</CustomField>